save before switching motherboard

--- a/src/styles/login.scss
+++ b/src/styles/login.scss
@@ -48,7 +48,11 @@
     }
 
     .error {
-      // background-color: ;
+      font-size: 1.2rem;
+      width: 80%;
+      height: max-content;
+      text-align: center;
+      color: #DC143C;
     }
 
     button {
