--- a/src/styles/pokemonItem.scss
+++ b/src/styles/pokemonItem.scss
@@ -6,6 +6,8 @@
   gap: 10px;
   padding: 10px;
   border: 1px solid lightgray;
+  animation: move .5s ease;
+  -webkit-animation: move 1s ease;
 
   > * {
     padding: 5px;
@@ -19,13 +21,76 @@
     place-items: center;
   }
 
-  .type .color {
-    width: 100%;
-    height: 100%;
+  .type {
+    position: relative;
+    --types: "";
+
+    // &::after {
+    //   content: var(--types);
+    //   width: max-content;
+    //   height: max-content;
+    //   opacity: 0;
+    //   text-align: center;
+    //   position: absolute;
+    //   left: 110%;
+    //   background-color: #242424;
+    //   color: white;
+    //   outline: 1px #242424 solid;
+    //   border-radius: 5px;
+    //   padding: 10px;
+    // }
+
+    // &:hover::after {
+    //   opacity: 1;
+    // }
+    &:hover {
+      .type-name {
+        opacity: 1;
+      }
+    }
+
+    .type-name {
+      opacity: 0;
+      pointer-events: none;
+      transition: opacity .25s ease;
+      position: absolute;
+      left: 125%;
+      background-color: whitesmoke;
+      border: 1px solid lightgray;
+      padding: 5px;
+      display: flex;
+      flex-direction: column;
+      gap: 5px;
+      border-radius: 5px;
+
+      .text {
+        font-size: 0.8rem;
+        padding: 1px 10px;
+        border-radius: 5px;
+        text-shadow: -.5px -.5px 0 #000, .5px -.5px 0 #000, -.5px .5px 0 #000, .5px .5px 0 #000;
+        color: white;
+      }
+    }
+
+    .color {
+      width: 100%;
+      height: 100%;
+    }
   }
 
   .name {
-    // font-size: 1rem;
     flex: 1 0 0;
+  }
+}
+
+@keyframes move {
+  from {
+    opacity: 0;
+    transform: translateX(100%);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateX(0);
   }
 }
