--- a/src/styles/pokedex.scss
+++ b/src/styles/pokedex.scss
@@ -21,4 +21,43 @@
     flex: 1 0 0;
     overflow: hidden;
   }
+
+  .bottom-panel {
+    width: 100%;
+    height: max-content;
+    padding: 10px;
+    border-top: 1px lightgray solid;
+    display: flex;
+    gap: 10px;
+
+    > * {
+      flex: 1 0 0;
+      padding: 5px;
+      border-radius: 5px;
+      cursor: pointer;
+      text-align: center;
+      text-decoration: none;
+    }
+
+    > *:nth-child(1) {
+      background-color: #ffffff;
+      color: #6495ed;
+      outline: 1px solid #6495ed;
+
+      &:hover {
+        background-color: #ececec;
+        color: #6495ed;
+      }
+    }
+
+    > *:nth-child(2) {
+      background-color: #6495ed;
+      color: #ffffff;
+
+      &:hover {
+        background-color: #5781ce;
+        color: #ffffff;
+      }
+    }
+  }
 }
