--- a/src/styles/login.scss
+++ b/src/styles/login.scss
@@ -1,17 +1,8 @@
-.container {
-  width: 380px;
-  aspect-ratio: 10 / 16;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  color: cornflowerblue;
-  border: 1px lightgrey solid;
-
-  h1 {
-    font-size: 1.625rem;
-    line-height: 200%;
-  }
+.form-container {
+  width: 100%;
+  height: 100%;
+  display: grid;
+  place-items: center;
 
   form {
     width: 100%;
@@ -20,7 +11,6 @@
     align-items: center;
     justify-content: center;
     flex: 1 0 0;
-    border-top: 1px lightgray solid;
     gap: 20px;
 
     input,
@@ -66,4 +56,5 @@
       }
     }
   }
+
 }
