--- a/src/styles/login.scss
+++ b/src/styles/login.scss
@@ -1,8 +1,11 @@
+@import './scss/variables.scss';
+
 .form-container {
   width: 100%;
   height: 100%;
-  display: grid;
-  place-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
   form {
     width: 100%;
@@ -19,7 +22,7 @@
       width: 80%;
       height: max-content;
       padding: 16px;
-      border: 1px lightgrey solid;
+      border: $border;
 
       &::placeholder {
         text-align: center;
