--- a/src/styles/pokedex.scss
+++ b/src/styles/pokedex.scss
@@ -1,19 +1,22 @@
+@import './scss/variables.scss';
+
+// Responsive probado hasta la resolución 320w * 570h
 .pokedex-container {
-  width: 380px;
-  aspect-ratio: 10 / 16;
+  width: $width;
+  height: $height;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   color: cornflowerblue;
-  border: 1px lightgrey solid;
+  border: $border;
 
   .pokedex {
     width: 100%;
     text-align: center;
     font-size: 1.625rem;
     line-height: 200%;
-    border-bottom: 1px lightgray solid;
+    border-bottom: $border;
   }
 
   .children {
@@ -26,7 +29,7 @@
     width: 100%;
     height: max-content;
     padding: 10px;
-    border-top: 1px lightgray solid;
+    border-top: $border;
     display: flex;
     gap: 10px;
 
