--- a/src/styles/pokemonItem.scss
+++ b/src/styles/pokemonItem.scss
@@ -1,48 +1,34 @@
+@import './scss/variables.scss';
+@import './scss/mixin.scss';
+
 .pokeitem {
   width: 100%;
-  height: max-content;
+  height: 60px;
   display: flex;
   justify-content: space-between;
   gap: 10px;
   padding: 10px;
-  border: 1px solid lightgray;
-  animation: move .5s ease;
-  -webkit-animation: move 1s ease;
+  border: $border;
+  transform: translateX(200%);
+
+  @include animationMove(0s);
 
   > * {
     padding: 5px;
-    border: 1px solid lightgray;
+    border: $border;
   }
 
   .type,
   .lvl {
-    width: 50px;
+    height: 100%;
+    aspect-ratio: 1;
     display: grid;
     place-items: center;
   }
 
   .type {
     position: relative;
-    --types: "";
 
-    // &::after {
-    //   content: var(--types);
-    //   width: max-content;
-    //   height: max-content;
-    //   opacity: 0;
-    //   text-align: center;
-    //   position: absolute;
-    //   left: 110%;
-    //   background-color: #242424;
-    //   color: white;
-    //   outline: 1px #242424 solid;
-    //   border-radius: 5px;
-    //   padding: 10px;
-    // }
-
-    // &:hover::after {
-    //   opacity: 1;
-    // }
     &:hover {
       .type-name {
         opacity: 1;
@@ -56,7 +42,7 @@
       position: absolute;
       left: 135%;
       background-color: whitesmoke;
-      border: 1px solid lightgray;
+      border: $border;
       padding: 5px;
       display: flex;
       flex-direction: column;
@@ -71,8 +57,8 @@
         background-color: whitesmoke;
         top: 50%;
         transform: translateY(-50%) translateX(-100%) rotate(45deg);
-        border-left: 1px solid lightgray;
-        border-bottom: 1px solid lightgray;
+        border-left: $border;
+        border-bottom: $border;
         border-top-right-radius: 100%;
       }
 
@@ -92,18 +78,15 @@
   }
 
   .name {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    font-size: 1.2rem;
     flex: 1 0 0;
   }
-}
 
-@keyframes move {
-  from {
-    opacity: 0;
-    transform: translateX(100%);
-  }
-
-  to {
-    opacity: 1;
-    transform: translateX(0);
+  .sprite {
+    height: 100%;
+    aspect-ratio: 1;
   }
 }
