--- a/src/styles/pokemonEdit.scss
+++ b/src/styles/pokemonEdit.scss
@@ -1,7 +1,7 @@
 @import './scss/variables.scss';
 @import './scss/mixin.scss';
 
-div.poke-pokemon-container {
+form.poke-pokemon-container {
   width: 100%;
   height: 100%;
   display: flex;
@@ -45,24 +45,47 @@ div.poke-pokemon-container {
       }
     }
 
-    .poke-container {}
+    .poke-container {
+      z-index: 1000;
+    }
 
     .sprites-container {
+
       .sprites {
         border: $border;
         width: 100%;
-        height: max-content;
+        height: 150px;
         display: flex;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
 
         > img {
-          width: 150px;
+          flex: 1 0 0;
+          height: 130px;
+        }
+
+        > input {
+          height: 20xp;
+          width: 100%;
+          border: $border;
+
+          &::placeholder {
+            text-align: center;
+            color: cornflowerblue;
+          }
+
+          &:focus,
+          &:hover {
+            outline: none;
+            border-color: cornflowerblue;
+          }
         }
       }
     }
 
     .abilities-container {
+
       .abilities {
         width: 100%;
         border: $border;
@@ -74,9 +97,51 @@ div.poke-pokemon-container {
         gap: 5px;
         padding: 5px;
 
-        > span {
-          font-size: 1.2rem;
-          line-height: 1.2rem;
+        .ability-container {
+          width: 100%;
+          display: flex;
+          gap: 5px;
+
+          .ability-name {
+            flex-grow: 1;
+            height: 20xp;
+            width: 100%;
+            border: $border;
+            text-align: center;
+
+            &::placeholder {
+              color: cornflowerblue;
+            }
+
+            &:focus,
+            &:hover {
+              outline: none;
+              border-color: cornflowerblue;
+            }
+          }
+
+          > button {
+            height: 100%;
+            flex-shrink: 0;
+            aspect-ratio: 1;
+            cursor: pointer;
+
+            &:hover {
+              outline: 1px solid coral;
+              color: coral;
+            }
+          }
+        }
+
+        > button {
+          width: 100%;
+          flex-shrink: 0;
+          cursor: pointer;
+
+          &:hover {
+            outline: 1px solid cornflowerblue;
+            color: cornflowerblue;
+          }
         }
       }
     }
