--- a/src/styles/pokemonList.scss
+++ b/src/styles/pokemonList.scss
@@ -1,9 +1,16 @@
-.pokemon-list {
-  padding: 15px;
+.pokemon-list-container {
+  height: 100%;
+  width: 100%;
   display: flex;
   flex-direction: column;
-  gap: 15px;
-  height: 100%;
-  overflow-y: auto;
-  overflow-x: hidden;
+
+  .pokemon-list {
+    padding: 15px;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    height: 100%;
+    overflow-y: auto;
+    overflow-x: hidden;
+  }
 }
