--- a/src/styles/pokemonItem.scss
+++ b/src/styles/pokemonItem.scss
@@ -82,7 +82,10 @@
     justify-content: flex-start;
     align-items: center;
     font-size: 1.2rem;
-    flex: 1 0 0;
+    // flex: 1 0 0;
+    width: 100%;
+    overflow-x: auto;
+    overflow-y: hidden;
   }
 
   .sprite {
